package NYT.NScheduler.NProto.NNode;

import "yt/server/lib/scheduler/proto/allocation.proto";

import "yt/ytlib/job_tracker_client/proto/job_tracker_service.proto";
import "yt/ytlib/job_tracker_client/proto/job.proto";

import "yt_proto/yt/client/node_tracker_client/proto/node.proto";

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

// Informs Allocation Tracker about node status and requests orders.
message TReqHeartbeat
{
    required int32 node_id = 1;
    required NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 2;
    required NNodeTrackerClient.NProto.TNodeResources resource_usage = 3;
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 4;
    repeated TAllocationStatus allocations = 5;

    required NNodeTrackerClient.NProto.TDiskResources disk_resources = 6;
    optional int32 job_reporter_write_failures_count = 7;
    optional bool job_reporter_queue_is_too_large = 8;

    repeated NYT.NProto.TGuid operations_ids_to_request_info = 11;

    // COMPAT(pogorelov)
    repeated NYT.NProto.TGuid unconfirmed_allocations = 9;
    required int64 confirmed_job_count = 10;
}

message TAllocationStartInfo
{
    required NYT.NProto.TGuid allocation_id = 1;
    required NYT.NProto.TGuid operation_id = 2;
    // Resource limits as predicted by the controller.
    required NNodeTrackerClient.NProto.TNodeResources resource_limits = 3;

    required NJobTrackerClient.NProto.TControllerAgentDescriptor controller_agent_descriptor = 4;
}

message TAllocationToAbort
{
    required NYT.NProto.TGuid allocation_id = 1;
    optional int32 abort_reason = 2;
    optional string preemption_reason = 3;
}

message TAllocationToInterrupt
{
    required NYT.NProto.TGuid allocation_id = 1;
    required int64 timeout = 2;
    optional string preemption_reason = 3;
    optional int32 interruption_reason = 4; // NScheduler::EInterruptReason
    optional NYT.NJobTrackerClient.NProto.TPreemptedFor preempted_for = 5;
}

message TOperationInfo
{
    required NYT.NProto.TGuid operation_id = 1;
    required bool running = 2;

    optional NJobTrackerClient.NProto.TControllerAgentDescriptor controller_agent_descriptor = 3;
}

message TRspHeartbeat
{
    repeated TAllocationStartInfo allocations_to_start = 1;
    repeated TAllocationToAbort allocations_to_abort = 2;
    repeated TAllocationToInterrupt allocations_to_interrupt = 3;
    optional bool scheduling_skipped = 4;
    optional int32 operation_archive_version = 5;

    repeated NJobTrackerClient.NProto.TJobToRemove jobs_to_remove = 6;
    repeated NYT.NProto.TGuid jobs_to_store = 7;
    repeated NYT.NProto.TGuid jobs_to_fail = 8;
    repeated NJobTrackerClient.NProto.TJobToConfirm jobs_to_confirm = 9;

    repeated TOperationInfo operation_infos = 10;

    repeated NJobTrackerClient.NProto.TControllerAgentDescriptor registered_controller_agents = 11;
}

////////////////////////////////////////////////////////////////////////////////
